tests/baselines/reference/importDeferMissingModuleESNext.errors.txt
b.ts(1,8): error TS18060: Deferred imports are only supported when the '--module' flag is set to 'esnext'.
b.ts(1,28): error TS2307: Cannot find module 'a' or its corresponding type declarations.


==== a.ts (0 errors) ====
    export function foo() {
        console.log("foo from a");
    }
    
==== b.ts (2 errors) ====
    import defer * as aNs from "a";
           ~~~~~~~~~~~~~~
!!! error TS18060: Deferred imports are only supported when the '--module' flag is set to 'esnext'.
                               ~~~
!!! error TS2307: Cannot find module 'a' or its corresponding type declarations.
    
    aNs.foo();
    